[project]
name = "oregon-notification-service"
version = "0.1.0"
description = "notifications"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiokafka>=0.13.0",
    "confluent-kafka>=2.14.0",
    "fastapi>=0.135.3",
    "python-dotenv>=1.2.2",
    "sse-starlette>=3.3.4",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.5",
    "ty>=0.0.21",
]

[tool.ruff]
target-version = "py314"
line-length = 100
include = ["src/**/*.py", "tests/**/*.py"]
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.pyi",
    "migrations",
    "node_modules",
]

[[tool.uv.index]]
url = "https://pypi.doubanio.com/simple/"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "SIM",
    "RET",
    "ARG",
    "PTH",
    "RUF",
    "ANN",
    "ERA",
    "G",
]

ignore = [
    "E501",
]

fixable = ["ALL"]

[tool.ty.src]
include = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
